--- a/css/styles.css
+++ b/css/styles.css
@@ -248,9 +248,6 @@ table{
 }
 .style-table th, td {
     border: 1px solid rgb(226, 226, 7, 0.5);
-   -moz-background-clip: padding;    
-            -webkit-background-clip: padding; 
-            background-clip: padding-box;  
 }
 .style-table tr:first-child{
     background: rgb(226, 226, 7);
@@ -445,6 +442,12 @@ input[type=text]{
         grid-column-start: 1;
         grid-row-start: 2;
         grid-row-end: 3;
+    }
+   .style-table th, td {
+        border: 1px solid rgb(226, 226, 7);
+            -moz-background-clip: padding;     /* Firefox 3.6 */
+            -webkit-background-clip: padding;  /* Safari 4? Chrome 6? */
+            background-clip: padding-box;      /* Firefox 4, Safari 5, Opera 10, IE 9 */
     }
 }
 @media only screen and (min-width: 768px) and (max-width: 961px){
