--- a/css/styles.css
+++ b/css/styles.css
@@ -42,6 +42,18 @@ ul li {
 .title-color{
     color: rgb(226, 226, 7);
 }
+::placeholder {
+    color: #000;
+    opacity: 0.7;
+}
+
+:-ms-input-placeholder {
+    color: #000;
+}
+
+::-ms-input-placeholder {
+    color: #000;
+}
 /* HEADER */
 .grid-header{
     display: grid;
@@ -109,6 +121,11 @@ ul li {
     color: black;
 }
 /* CONTAINER */
+.touch{
+    overflow-y: scroll;
+  -webkit-overflow-scrolling: touch;
+
+}
 .content{
    text-align: justify;
    word-break: break-word;
@@ -240,10 +257,10 @@ table{
     color: rgb(20, 20, 20);
 }
 .style-table td:first-child{
-    width: 20%;
+    width: 22%;
 }
 .style-table td:nth-child(2n+0){
-    width: 30%;
+    width: 27%;
 }
 .grid-location{
     display: grid;
@@ -343,7 +360,7 @@ table{
 .flex-form{
     display: flex;
     flex-wrap: wrap;
-    flex-direction: row;
+    /* flex-direction: row; */
 }
 .flex-form-items{
     flex-grow: 2;
